# Cj

./: .clang-format  .gitignore  CMakeLists.txt  IMPLEMENTATION_ROADMAP.md  README.md
docs/: COMPILER_ARCHITECTURE.md  Doxyfile.in  SSA_IMPLEMENTATION.md
examples/: CMakeLists.txt  before_after_demo.cpp  calculator.cj  complete_demo.cpp  fibonacci.cj  hello.cj  hello_world.cpp  lexer_demo.cpp  optimization_demo.cpp  parse_test.cpp  parser_demo.cpp  ssa_demo.cpp  static_typing_demo.cj  static_typing_test.cpp  stdlib_demo.cj  type_demo.cpp
examples/static_typing_demo/: demo.cpp
include/cj/: cj.h  common.h
include/cj/ast/: ast_node.h  ast_visitor.h
include/cj/gc/: garbage_collector.h
include/cj/ir/: instruction.h  ssa.h
include/cj/jit/: jit_compiler.h
include/cj/lexer/: lexer.h  token.h
include/cj/middlend/: ssa.h
include/cj/parser/: parser.h
include/cj/semantic/: type_checker.h
include/cj/stdlib/: cj_stdlib.h  containers.h  iterators.h  math.h  simple_containers.h  string_utils.h  type_conversion.h
include/cj/types/: type_system.h  value.h
include/cj/vm/: virtual_machine.h
src/: CMakeLists.txt  cj_engine.cpp  compiler_main.cpp  repl_main.cpp  vm_main.cpp
src/ast/: CMakeLists.txt  ast_node.cpp  ast_visitor.cpp
src/gc/: CMakeLists.txt  garbage_collector.cpp
src/ir/: CMakeLists.txt  instruction.cpp  ssa.cpp
src/jit/: CMakeLists.txt  jit_compiler.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  token.cpp
src/parser/: CMakeLists.txt  parser.cpp
src/semantic/: CMakeLists.txt  type_checker.cpp
src/stdlib/: stdlib.cpp
src/types/: CMakeLists.txt  type_system.cpp  value.cpp
src/utils/: CMakeLists.txt  file_utils.cpp  string_utils.cpp
src/vm/: CMakeLists.txt  virtual_machine.cpp
stdlib/: README.md  index.cj
stdlib/collections/: queue.cj  stack.cj
stdlib/core/: array.cj
stdlib/io/: console.cj
stdlib/math/: basic.cj
tests/: CMakeLists.txt
tests/manual/: CMakeLists.txt  manual_test_lexer.cpp  manual_test_parser.cpp
